# quadruped_locomotion

./: .CMakeLists.txt.swp  .README.md.swp  .gitignore  :w  CMakeLists.txt  README.md  package.xml  show_motion_plan.rviz
config/: DynamicControl.cfg  anymal_config.yaml
include/: .anymal_controller.hpp.swp  .anymal_plugin.hpp.swp  anymal_constants.hpp  anymal_controller.hpp  anymal_plugin.hpp  helper_functions.hpp  math.hpp  variable_types.hpp
include/control/: .controller.hpp.swp  controller.hpp  hierarchical_qp.hpp  integrator.hpp  joint_controller.hpp  optimization_task.hpp  whole_body_controller.hpp
include/control/ho_qp/: ho_qp_controller.hpp  ho_qp_problem.hpp  task_definition.hpp
include/dynamics/: dynamics.hpp
include/gazebo/: anymal_plugin.hpp
include/planner/: base_planner.hpp  gait_sequence.hpp  leg_planner.hpp  motion_planner.hpp  planner.hpp
include/visualize/: joint_state_publisher.hpp
launch/: .anymal.launch.swp  anymal.launch  motion_planner.launch  run_controllers.launch  test.launch  tune_joint_controllers.launch  visualize_kinematics.launch
python_prototyping/: visualize.py
rviz/: show_motion_plan.rviz
src/: .anymal_controller.cpp.swp  .anymal_plugin.cpp.swp  .dynamics.cpp.swp  anymal_controller.cpp  anymal_plugin.cpp  dynamics.cpp
src/control/: .controller.cpp.swp  .controller_node.cpp.swp  controller.cpp  controller_node.cpp  hierarchical_qp.cpp  integrator.cpp  joint_controller.cpp  optimization_task.cpp  whole_body_controller.cpp
src/control/ho_qp/: ho_qp_controller.cpp  ho_qp_problem.cpp
src/dynamics/: dynamics.cpp
src/gazebo/: anymal_plugin.cpp
src/planner/: base_planner.cpp  frame_broadcaster.cpp  leg_planner.cpp  motion_planner.cpp  motion_planner_node.cpp  planner.cpp  planner_run.cpp
src/visualize/: joint_state_publisher.cpp
